# semantic_covins

./: .dockerignore  .gitignore  Dockerfile  Dockerfile_client.arm  Dockerfile_client.x86  README.md  build_docker.sh  build_docker_arm.sh  build_docker_x86.sh  run_demo_tmux.yaml  run_docker.sh  run_docker_arm.sh  run_docker_x86.sh
config/: our_driver.launch
docs/: Flashing Jetson SSD.md  Semantic_COVINS.md
output/octomaps/: octomap_nospeck_005.pgm  octomap_nospeck_010.pgm  octomap_nospeck_lprob_010.pgm
src/covins/: dependencies.rosinstall
src/covins/covins_backend/: CMakeLists.txt  package.xml
src/covins/covins_backend/cfg/: GridMapper.cfg
src/covins/covins_backend/config/: config_backend.yaml  covins.rviz  covins_with_clients.rviz  covins_with_clients_3.rviz  objects.yaml
src/covins/covins_backend/covins_sys/src/: covins_backend_node.cpp  filtered_cloud_publisher.cpp
src/covins/covins_backend/include/covins/covins_backend/: CloudWallSegmentation.hpp  GridMapper.hpp  backend.hpp  keyframe_be.hpp  placerec_be.hpp  post_processor.hpp  visualization_be.hpp
src/covins/covins_backend/include/covins/covins_base/: config_backend.hpp  keyframe_base.hpp  visualization_base.hpp
src/covins/covins_backend/launch/: add_client.launch  add_semantic_client.launch  covins_backend.launch  covins_with_bags.launch  covins_with_sem.launch  esdf_server.launch  octomap_server.launch  play_3_client_bags.launch  play_recording_2_client.launch  play_recording_3_client.launch
src/covins/covins_backend/msg/: trajectories_message.msg
src/covins/covins_backend/scripts/: main_axis_tf_node.py
src/covins/covins_backend/src/covins_backend/: CloudWallSegmentation.cpp  GridMapper.cpp  Se3Solver.cpp  backend.cpp  handler_be.cpp  keyframe_be.cpp  kf_database.cpp  placerec_be.cpp  post_processor.cpp  visualization_be.cpp
src/covins/covins_backend/src/covins_base/: visualization_base.cpp
src/covins/covins_backend/srv/: ServiceBuildGrid.srv
src/covins/covins_comm/config/: config_comm.yaml
src/covins/covins_comm/include/covins/covins_base/: config_comm.hpp  typedefs_base.hpp
src/covins/covins_comm/include/covins/covins_base/msgs/: msg_keyframe.hpp
src/covins/covins_comm/src/covins_base/: communicator_base.cpp
src/covins/map_processor/: CMakeLists.txt  mainpage.dox  package.xml
src/covins/map_processor/launch/: floorplan_extractor.launch
src/covins/map_processor/scripts/: floorplan_extraction_node.py
src/covins/map_processor/semantic_mapper_pkg/: pyproject.toml
src/covins/map_processor/semantic_mapper_pkg/src/mapper/: __init__.py  main.py  mapper.py  mapper_2d.py  mapper_3d.py  pcd_viewer.py  rmf_cut.py  utils.py
src/covins/orb_slam3/: .gitignore  CMakeLists.txt
src/covins/orb_slam3/Examples/ROS/ORB_SLAM3/: CMakeLists.txt  Intel_D435i_042222071807.yaml  package.xml
src/covins/orb_slam3/Examples/ROS/ORB_SLAM3/launch/: launch_EIT_clients.launch  launch_EIT_recordings.launch  launch_ros_euroc.launch  launch_ros_euroc_second_agent.launch
src/covins/orb_slam3/Examples/ROS/ORB_SLAM3/launch/config/: client1_Intel_D435i_036522070077.yaml  client2_Intel_D435i_033422070391.yaml
src/covins/orb_slam3/Examples/ROS/ORB_SLAM3/src/: ros_semantic_mono_inertial.cc
src/covins/orb_slam3/covins_examples/: euroc_examples_mh1.sh  euroc_examples_mh12345_vigba.sh  euroc_examples_mh123_vigba.sh  euroc_examples_mh2.sh  euroc_examples_mh3.sh  euroc_examples_mh4.sh  euroc_examples_mh5.sh
src/covins/orb_slam3/include/: Frame.h  KeyFrame.h  ORBVocabulary.h  ORBmatcher.h  System.h  Tracking.h
src/covins/orb_slam3/src/: Frame.cc  Initializer.cc  KeyFrame.cc  KeyFrameDatabase.cc  LoopClosing.cc  MapDrawer.cc  ORBmatcher.cc  Sim3Solver.cc  System.cc  Tracking.cc  TwoViewReconstruction.cc
src/covins/sam_node/: CMakeLists.txt  build_engines.sh  package.xml
src/covins/sam_node/launch/: one_node.launch  three_nodes.launch  two_nodes_bags.launch
src/covins/sam_node/src/: sam_node.py  sam_test.py
src/covins/scripts/: bag_to_images.py  filter_pointcloud_in_bag.py  final_trajectory_from_bag_to_csv.py  livox_pointcloud_read.py  marker_to_ptc.py
src/covins/spot_client/: CMakeLists.txt  mainpage.dox  manifest.xml
src/covins/spot_client/launch/: realsense_bringup.launch  spot_client.launch
src/covins/spot_client/src/: client_node.py
web/: pointmap.net.conf
web/pointmap.net/: index.html
